# EA

./: .gitignore  celery_app.py  config.py  database.py  ea_data_loader.py  index.py  lmm_analyzer.py  main.py  mlg_manager.py  object_dict.py  post.py  pyproject.toml  vercel.json
model/: analysis_model.py  object_model.py  post_model.py  user_model.py
routes/: auth.py  export.py  post.py
services/: export_service.py  lmm_service.py  mlg_service.py  object_service.py
static/css/: style.css
static/js/: main.js
templates/: dashboard.html  export.html  layout.html  login.html  post_detail.html  posts.html
utils/: __init__.py  auth.py  helpers.py
